# dnsfun

./: Cargo.toml  Dockerfile  LICENSE.md  README.md
.github/workflows/: docker.yaml  rust.yaml
src/: handler.rs  main.rs  options.rs
