[package]
name = "dnsfun"
version = "0.1.0"
edition = "2021"
authors = ["Patrick M. Elsen <pelsen@xfbs.net>"]
license = "MIT"

[dependencies]
anyhow = "1.0.68"
async-trait = "0.1.60"
clap = { version = "4.0.32", features = ["derive", "env"] }
thiserror = "1.0.38"
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread", "net"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
trust-dns-server = "0.22.0"

[profile.release]
opt-level = "z"
lto = "thin"
debug = false
strip = true
